testCases/keywords/test2.uni
main(){
	busTwo = 1000b; //valid 	
	print = 1111b; //error

	out:;
}
neigh!
